fixed like button unevenness

--- a/src/web/components/ui-kit/LikeButton/LikeButton.css
+++ b/src/web/components/ui-kit/LikeButton/LikeButton.css
@@ -1,5 +1,7 @@
 .like-svg {
     display: inline-block;
+    position: relative;
+    top: .25em;
 }
 
 .like-count {
